--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="jumbotron">
+	<h1>Welcome to the family!</h1>
+	<p>Congratulations on the aquisition. Let's upload some sales data. Simply select your text file and click the upload button.</p>
+</div>
+<div class="row">
+	<div class="col-md-4"></div>
+	<div class="col-md-4">
+		<%= form_tag "/upload" do %>
+		<%= file_field_tag "file" %>
+		</br>
+		<%=submit_tag "Upload", class: "btn btn-lg" %>
+		<% end %>
+	</div>
+	<div class="col-md-4"></div>
+</div>
