--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,28 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.jumbotron {
+	color: #EEE;
+	background-color:#544AA1;
+	margin-top: 4em;
+
+	p {
+		line-height: 1.5em
+	}
+}
+
+.btn {
+	color: #EEE;
+	background-color:#544AA1;
+}
+
+
+// body {
+// 	background-repeat: no-repeat;
+// 	background-image: linear-gradient(to bottom, #00A3EF 0%, #FFFFFF 100%);
+// 	background-image: -ms-linear-gradient(top, #00A3EF 0%, #FFFFFF 100%);
+// 	background-image: -moz-linear-gradient(top, #00A3EF 0%, #FFFFFF 100%);
+// 	background-image: -o-linear-gradient(top, #00A3EF 0%, #FFFFFF 100%);
+// 	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #00A3EF), color-stop(1, #FFFFFF));
+// 	background-image: -webkit-linear-gradient(top, #00A3EF 0%, #FFFFFF 100%);
+// }
