--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -16,6 +16,18 @@
 	background-color:#544AA1;
 }
 
+.row {
+	margin-top: 4em
+}
+
+form {
+	border-style:solid;
+	border-width:1px;
+	border-radius: 6px;
+	color:#544AA1;
+	padding: 2em;
+}
+
 
 // body {
 // 	background-repeat: no-repeat;
