--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,10 +1,11 @@
-<h1>Listing items</h1>
+<h1>Listing Items</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Description</th>
       <th>Price</th>
+      <th>Merchant</th>
       <th></th>
       <th></th>
       <th></th>
@@ -15,7 +16,8 @@
     <% @items.each do |item| %>
       <tr>
         <td><%= item.description %></td>
-        <td><%= item.price %></td>
+        <td><%= number_to_currency(item.price) %></td>
+        <td><%= item.merchant.name %></td>
         <td><%= link_to 'Show', item %></td>
         <td><%= link_to 'Edit', edit_item_path(item) %></td>
         <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
