--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -1,26 +1,34 @@
-<h1>Listing purchases</h1>
+<h1>Listing Purchases</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Count</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @purchases.each do |purchase| %>
+<div class="row">
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= purchase.count %></td>
-        <td><%= link_to 'Show', purchase %></td>
-        <td><%= link_to 'Edit', edit_purchase_path(purchase) %></td>
-        <td><%= link_to 'Destroy', purchase, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Item Description</th>
+        <th>Item Pirce</th>
+        <th>Purchase Count</th>
+        <th>Customer Name</th>
+        <th>Merchant Name</th>
+        <th>Merchant Address</th>
+        <th>Date Added</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @purchases.each do |purchase| %>
+        <tr>
+          <td><%= purchase.items.first.description %></td>
+          <td><%= number_to_currency(purchase.items.first.price) %></td>
+          <td><%= purchase.count %></td>
+          <td><%= purchase.customer.name %></td>
+          <td><%= purchase.items.first.merchant.name %></td>
+          <td><%= purchase.items.first.merchant.address %></td>
+          <td><%= purchase.created_at %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 <br>
 
