--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= item.description %></td>
         <td><%= number_to_currency(item.price) %></td>
-        <td><%= item.merchant.name %></td>
+        <td><%= item.merchant.name if item.merchant %></td>
         <td><%= link_to 'Show', item %></td>
         <td><%= link_to 'Edit', edit_item_path(item) %></td>
         <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
