--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -21,7 +21,7 @@
           <td><%= purchase_item.description if purchase_item %></td>
           <td><%= number_to_currency(purchase_item.price) if purchase_item %></td>
           <td><%= purchase.count %></td>
-          <td><%= purchase.customer.name %></td>
+          <td><%= purchase.customer.name if purchase.customer %></td>
           <td><%= purchase_item.merchant.name if purchase_item %></td>
           <td><%= purchase_item.merchant.address if purchase_item %></td>
           <td><%= purchase.created_at %></td>
